# Robotics-I-RAS545

./: .gitignore  README.md
HWs/: README.md
HWs/HW2/: HW2_code.m
HWs/HW3/Q1/: Q1.m  Q1_1.m  Q1_2.m
HWs/HW3/Q2/: Forward_Kinematics.m  move_SCARA.slx
HWs/HW3/Q3/: Inverse_Kinematics.m  SCARA_robot.slx  createDH_T.m  draw_square.m  draw_square_signal.mat  move_SCARA_square.slx  move_SCARA_square.slxc
HWs/HW5/: HW5.m  HW5_b.slx  HW5_c.slx  HW5_d.slx  HW5_e.slx
Labs/: README.md
Labs/src/dobot_magician_lite/: CMakeLists.txt  package.xml
Labs/src/dobot_magician_lite/config/: joint_trajectory_controller.yaml
Labs/src/dobot_magician_lite/launch/: arm_urdf.launch.py  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
Labs/src/dobot_magician_lite/meshes/: E.E..STL  base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
Labs/src/dobot_magician_lite/urdf/: dobot_magician_lite.csv  dobot_magician_lite.urdf
Labs/src/mycobot_pro_600/: package.xml  setup.cfg  setup.py
Labs/src/mycobot_pro_600/config/: mycobot_600.rviz
Labs/src/mycobot_pro_600/launch/: cobot_control.launch.py  slider_control.launch.py
Labs/src/mycobot_pro_600/mycobot_pro_600/: FK.py  IK.py  cobot_subscriber.py  img_processor_publisher.py  inverse_kinematics.py  maze_solver_publisher.py  set_home.py  slider_control.py
Labs/src/mycobot_pro_600/urdf/urdf/mycobot_pro_600/: mycobot_pro_600.urdf
